# otus-typing-challange

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  zeabur.py
.github/workflows/: ci.yml
src/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
src/zeabur/: module.py
